Vertical align fix

--- a/css/less/crowdVoice.less
+++ b/css/less/crowdVoice.less
@@ -13,7 +13,7 @@
 ---------------------------------------------------------------------------------- */
 
 @media-retina: ~'only screen and (min--moz-device-pixel-ratio: 1.5), (-o-min-device-pixel-ratio: 3/2), (-webkit-min-device-pixel-ratio: 1.5), (min-device-pixel-ratio: 1.5)';
- 
+
 /* /Base
 ---------------------------------------------------------------------------------- */
 
@@ -94,7 +94,7 @@
         left: 50%;
         max-width: 90%;
         background-color: #FFF;
-        margin-top: -15px;
+        margin-top: -21px;
 
         -webkit-transform: translate(-50%);
         -o-transform: translate(-50%);
